src/assets/css/App.css
/*
|--------------------------------------
| Variables
|--------------------------------------
|
*/

:root {
  --brand-color-primary: #623bbb;
  --brand-color-secondary: #5379a2;
  --body-offset: 5rem;
}

/*
|--------------------------------------
| Core Styles
|--------------------------------------
|
*/

* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
  color: #fff;
  min-height: 100%;
  font-size: 18px;
  font-family: 'Source Sans Pro', sans-serif;
  background: linear-gradient(135deg, #3023ae 0%, #c86dd7 100%);
  background-attachment: fixed;
}

body{
  padding-top: var(--body-offset); /* to offset the nav */  
}

#app-root {
  min-height: 100%;
  animation: fadeIn 1s ease;
}

input:not([type='checkbox']),
button,
select,
textarea {
  background: #fff;
  box-shadow: none;
  border-radius: 3px;
  padding: 0.5rem 1rem;
  border: 1px solid rgba(0, 0, 0, 0.2);
  appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
}

input,
textarea {
  width: 100%;
}

label{
  color: #000;
  display: block;
  padding-bottom: 1rem;
}

button{
  cursor: pointer;
  outline: 0;
}

button:hover{
  background: rgba(0,0,0,.05);
}

/*
|--------------------------------------
| Animations
|--------------------------------------
|
*/

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(1rem);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/*
|--------------------------------------
| Sweet Alert
|--------------------------------------
|
*/

.swal-overlay{
  background-color: rgba(0,0,0,.8);
}

.swal-modal{
  border-radius: 3px;
}

.swal-button{
  width: 100px;
  font-size: initial;
  border-radius: 3px;
  padding: 0.5rem 1rem;
  border: 1px solid rgba(0, 0, 0, 0.2);
}

.swal-button--confirm{
  background-color: #f97c7c;
}

.swal-button--confirm:not([disabled]):hover{
  background-color: #c56464;
}

.swal-footer{
  text-align: center;
}

/*
|--------------------------------------
| Utilities
|--------------------------------------
|
*/

.mt-a {
  margin-top: auto;
}
.mt-0 {
  margin-top: 0;
}
.mt-1 {
  margin-top: 0.25rem;
}
.mt-2 {
  margin-top: 0.5rem;
}
.mt-3 {
  margin-top: 0.75rem;
}
.mt-4 {
  margin-top: 1rem;
}
.mr-a {
  margin-right: auto;
}
.mr-0 {
  margin-right: 0;
}
.mr-1 {
  margin-right: 0.25rem;
}
.mr-2 {
  margin-right: 0.5rem;
}
.mr-3 {
  margin-right: 0.75rem;
}
.mr-4 {
  margin-right: 1rem;
}
.mb-a {
  margin-bottom: auto;
}
.mb-0 {
  margin-bottom: 0;
}
.mb-1 {
  margin-bottom: 0.25rem;
}
.mb-2 {
  margin-bottom: 0.5rem;
}
.mb-3 {
  margin-bottom: 0.75rem;
}
.mb-4 {
  margin-bottom: 1rem;
}
.ml-a {
  margin-left: auto;
}
.ml-0 {
  margin-left: 0;
}
.ml-1 {
  margin-left: 0.25rem;
}
.ml-2 {
  margin-left: 0.5rem;
}
.ml-3 {
  margin-left: 0.75rem;
}
.ml-4 {
  margin-left: 1rem;
}

